# ag-claw

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README.md  TEST_SCENARIOS.md  UI_PLAN.md  compare_apis.py  demo_side_by_side.py  deploy.sh  lagging-flow.md  pyproject.toml  requirements-codex-test.txt  requirements.txt  run_examples.sh  setup-ec2.sh  show_blocking_evidence.py  test_full_search.py  test_integration.py  test_mock_search.py  test_new_display.py  test_parallel_search.py  test_searchapi.py  test_serpapi.py  test_site_blocking.py  view_images.py
.github/workflows/: ci.yml
shopping_agent/: __init__.py  server.py
shopping_agent/app/: async_utils.py  config.py  discord_bot.py  guardrails.py  guided_party.py  interactive.py  main.py  models.py  orchestrator.py  postprocess.py  prompts.py
shopping_agent/app/agents/: browser_search.py  planner.py  searchapi_search.py  serpapi_search.py
shopping_agent/app/tools/: __init__.py  browser_tools.py  browserbase.py  pinelabs.py
shopping_agent/app/workflows/: guided_party_workflow.py  planning_workflow.py
shopping_agent/tests/: test_api_endpoints.py  test_browser_search.py  test_guided_party_workflow.py  test_models.py  test_pinelabs_tools.py  test_planner_agent.py  test_postprocess.py
